# smeagol

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md
.github/actions/install-deps/: action.yml
.github/workflows/: ci.yml  docs.yml
agent_notes/: planning.md
examples/: bad_robot.yaml
examples/deformation_series/: deform_robot.yaml  run.sh
examples/evolve/: config.yaml
examples/mutator_demo/: run.sh  seed_robot.yaml
examples/random_robots/: bak.robot_0.yaml.fixed  generate.yaml  run.sh  simulate.yaml
examples/random_robots/robots/: robot_0.yaml  robot_1.yaml  robot_2.yaml  robot_3.yaml  robot_4.yaml  robot_5.yaml  robot_6.yaml  robot_7.yaml  robot_8.yaml  robot_9.yaml
examples/robot_fall/: robot.yaml  robot_upsidedown.yaml  run.sh  simulation.yaml
examples/robot_fitness/: params.yaml  robot.yaml  run.sh
examples/robot_neuralactuator/: robot.yaml  run.sh  simulation.yaml
examples/robot_randomevolve/: drift.yaml  robot_0.yaml  run.sh
examples/robot_randomevolve/output/: robot_final.yaml
examples/robot_sineactuator/: robot.yaml  run.sh  simulation.yaml
examples/robot_validation/: bad_robot.yaml  run.sh
examples/robot_visualize/: good_robot.yaml  run.sh  run_createimage.sh  run_scene.sh
examples/tetrahedron_pendulum/: robot.yaml  run.sh  simulation.yaml
include/: Actuator.h  Bar.h  DebugActuator.h  Evolver.h  FitnessEvaluator.h  Materials.h  Mutator.h  Neuron.h  Robot.h  RobotFactory.h  RobotPart.h  SceneRenderer.h  Simulator.h  SnapshotRenderer.h  Vertex.h  VideoRenderer.h
prod/: .gitignore  config.yaml  run.sh
src/: Evolver.cpp  FitnessEvaluator.cpp  Mutator.cpp  Robot.cpp  RobotFactory.cpp  SceneRenderer.cpp  Simulator.cpp  SnapshotRenderer.cpp  VideoRenderer.cpp
tests/: CMakeLists.txt  test_debug_actuator.cpp  test_dependencies.cpp  test_evolver.cpp  test_fitness.cpp  test_mutator.cpp  test_neural_actuator.cpp  test_robot.cpp  test_robot_factory.cpp  test_robot_parts.cpp  test_scene_renderer.cpp  test_simulator.cpp  test_snapshot.cpp  test_video_renderer.cpp  test_yaml.cpp
tools/: deformation_series.cpp  demo_mutator.cpp  drift_robot.cpp  evaluate_fitness.cpp  evolve.cpp  fall_animation.cpp  generate_robots.cpp  random_robots.cpp  run_simulation.cpp  snapshot_robot.cpp  validate_robot.cpp  visualize_robot.cpp
